--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,13 +3,14 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 10%;
-  color: #ddd;
-  border-bottom: 1px solid gray;
+  background: #fff !important;
+  color: #1E1E1E;
+  /* border-bottom: 1px solid gray; */
 }
 
 .logo {
-  object-fit: contain;
-  height: 40px;
+  /* object-fit: contain; */
+  /* height: 20px; */
 }
 
 .navbar ul {
@@ -21,6 +22,7 @@
 .navbar li {
   cursor: pointer;
   font-size: 18px;
+  font-weight: 500;
 }
 
 .nav__right {
@@ -32,13 +34,14 @@
 .navbar select {
   padding: 5px 8px;
   border-radius: 6px;
-  border: 2px solid white;
+  border: 2px solid #1E1E1E;
   background: transparent;
-  color: white;
+  color: #1E1E1E;
 }
 
 .navbar option {
-  background-color: #09005c;
+  /* background-color: #09005c; */
+  background-color: #1E1E1E;
   color: white;
 }
 
@@ -48,11 +51,11 @@
   gap: 10px;
   padding: 10px 25px;
   border-radius: 10px;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 500;
   color: #393939;
   background: white;
-  border: none;
+  border: 1px solid #1E1E1E;
   cursor: pointer;
 }
 
