--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 * {
   margin: 0;
@@ -14,6 +15,7 @@ a {
 
 .app {
   min-height: 100vh;
-  color: #fff;
-  background: linear-gradient(#0b004e, #1d152f, #002834);
+  color: #1E1E1E;
+  /* background: linear-gradient(#0b004e, #1d152f, #002834); */
+  background: #fff;
 }
